--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon ./src/server.js",
+    "watch": "CHOKIDAR_USEPOLLING=true nodemon ./src/server.js",
     "start": "node ./src/server.js"
   },
   "keywords": [],
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "csv-parse": "^5.0.4",
     "express": "^4.17.3"
   }
 }
